# CodeExplain-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  home.tsx  pyproject.toml  pytest_all.txt  pytest_analyzer.txt  pytest_explainer.txt  pytest_final.txt  pytest_final2.txt  pytest_final_pass.txt  pytest_output.txt  requirements.txt  script.py
api/: __init__.py  local_api.py  response_models.py
cli/: __init__.py  main_cli.py
cli/commands/: analyze.py  explain.py  report.py  visualize.py
config/: default_config.yaml  rules.yaml
core/: __init__.py
core/analyzer/: __init__.py  code_smells.py  complexity_analyzer.py  dependency_analyzer.py  metrics.py
core/explainer/: __init__.py  beginner_mode.py  developer_mode.py  explanation_engine.py  fun_modes.py  narrative_generator.py
core/graph/: __init__.py  call_graph.py  control_flow.py  dependency_graph.py
core/parser/: __init__.py  ast_parser.py  factory.py  node_mapper.py  symbol_table.py  typescript_parser.py
core/scoring/: __init__.py  difficulty_score.py  maintainability_score.py
docs/: api_reference.md  architecture.md  roadmap.md  usage.md
examples/: sample_code_1.py  sample_code_2.py
plugins/: __init__.py  base_plugin.py  plugin_loader.py
temp_uploads/: laundry_list.py
tests/: test_analyzer.py  test_cli.py  test_explainer.py  test_parser.py
ui/: index.html  package.json
ui/src/: App.jsx  index.css
utils/: __init__.py  file_loader.py  formatter.py  helpers.py  logger.py
visualization/: __init__.py  ascii_diagrams.py  flow_visualizer.py  graph_renderer.py
